minitrace-macro/tests/ui/err/item-is-not-a-function.stderr
error: expected identifier
 --> tests/ui/err/item-is-not-a-function.rs:3:9
  |
3 | #[trace("test-span")]
  |         ^^^^^^^^^^^
