minitrace-macro/tests/ui/err/item-is-not-a-function.rs
use minitrace::trace;

#[trace("test-span")]
struct S;

fn main() {}
